# src/swagger-api.json
@@ -1,32 +1,60 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "NodeTask",
-      "version": "1.0.0",
-      "description": ""
-    },
-    "servers":[
-        {
-            "url":"http://localhost:4002/api"
-        }
-    ],
-    "components":{
-      "securitySchemes":{
-        "JWT":{
-            "type":"apiKey",
-            "in":"header",
-            "name":"AuthToken"
-        }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "NodeTask",
+    "version": "1.0.0",
+    "description": ""
+  },
+  "servers":[
+      {
+          "url":" http://localhost:4002/api"
       }
-    },
-    "paths": {
-        "/user/login": {
+  ],
+  "components":{
+    "securitySchemes":{
+      "JWT":{
+          "type":"apiKey",
+          "in":"header",
+          "name":"AuthToken"
+      }
+    }
+  },
+  "paths": {
+      "/user/login": {
+        "post": {
+          "tags":[
+              "Admin"
+          ],
+          "summary":"Admin login",
+          "description": "Admin login",
+          "parameters": [],
+          "responses": {},
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "example": "string"
+                    },
+                    "password": {
+                      "example": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "/user/register": {
           "post": {
             "tags":[
-                "User"
+                "Admin"
             ],
-            "summary":"User login",
-            "description": "User login",
+            "summary":"Admin Reg",
+            "description": "Admin Reg",
             "parameters": [],
             "responses": {},
             "requestBody": {
@@ -40,6 +68,9 @@
                       },
                       "password": {
                         "example": "string"
+                      },
+                      "uname":{
+                          "example":"string"
                       }
                     }
                   }
@@ -48,30 +79,31 @@
             }
           }
         },
-        "/user/register": {
-            "post": {
-              "tags":[
-                  "User"
-              ],
-              "summary":"User Reg",
-              "description": "User Reg",
-              "parameters": [],
-              "responses": {},
-              "requestBody": {
-                "content": {
-                  "application/json": {
-                    "schema": {
-                      "type": "object",
-                      "properties": {
-                        "email": {
-                          "example": "string"
-                        },
-                        "password": {
-                          "example": "string"
-                        },
-                        "uname":{
-                            "example":"string"
-                        }
+        "/user/generatelink": {
+          "post": {
+            "tags":[
+                "User"
+            ],
+            "summary":"Generate link",
+            "security":[
+              {
+                "JWT":[]
+              }
+            ],
+            "description": "Generate link",
+            "parameters": [],
+            "responses": {},
+            "requestBody": {
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "email": {
+                        "example": "string"
+                      },
+                      "tittle": {
+                        "example": "string"
                       }
                     }
                   }
@@ -79,5 +111,64 @@
               }
             }
           }
-    }
+        },
+        "/user/upload/{LinkId}": {
+          "post": {
+             "tags":[
+              "User"
+             ], 
+            "summary":"Upload File/Image",
+            "description": "upload File",
+            "parameters":[
+              {
+                "name":"LinkId",
+                "in":"path",
+                "required":true
+              }
+            ],
+            "requestBody": {
+              "required": true,
+              "content": {
+                "multipart/form-data": {
+                  "schema": {
+                    "type": "object",
+                   
+                    "properties": {
+                        "file": {
+                        "type": "string",
+                        "format": "binary"
+                      },
+                      "email":{
+                        "type":"string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "responses": {}
+          }
+        },
+        "/user/getfile": {
+          "get": {
+             "tags":[
+              "User"
+             ], 
+            "summary":"Get Link User",
+            "security":[
+              {
+                "JWT":[]
+              }
+            ],
+            "description": "Get Link User By linkID",
+            "parameters":[
+              {
+                "name":"id",
+                "in":"query"
+              }
+            ],
+            "responses": {}
+          }
+        }
+  }
 }
